Update Kitchen Analogy

--- a/3.1-intel-architecture-evolution.md
+++ b/3.1-intel-architecture-evolution.md
@@ -24,6 +24,18 @@ Consist of:
 ## Kitchen Analogy to Explain Chip Design
 Imagine a Kitchen that has a fixed size and you want to cook more dishes. You can either increase the number of burners or make the burners more efficient. This is similar to the PPA concept in processors.
 
-The burners are the cores, the kitchen is the chip, and the dishes are the applications. 
+The burners are the **cores**, the kitchen is the chip, and the dishes are the applications. 
 
-If you increase the number of burners, you need to increase the size of the kitchen. Else you can make the burners more efficient. Increase gas flow - increase cloock speed. 
+If you increase the number of burners, you need to increase the size of the kitchen. Else you can make the burners more efficient. Increase gas flow - increase **cloock speed**. 
+
+The fridge is the **cache**. The bigger the fridge, the more ingredients you can store. The closer the fridge to the burners, the faster you can cook.
+
+The supermarket is the memory. The closer the supermarket to the kitchen, the faster you can get ingredients. There are obstacles to get to the supermarket, like traffic, which is the **latency**, essentially the time it takes to get to the supermarket and back.  
+The amount of items you can transfer is the **bandwidth**.
+
+If there is a congestion (traffic jam) in the supermarket, you can't get the ingredients you need. This is the **memory bandwidth**.
+
+To reduce the congestion, you can increase the number of lanes to the supermarket. This is the **memory channel**.
+
+The relationship between latency and bantwidth is the **memory hierarchy**. The closer the memory is to the processor, the lower the latency and higher the bandwidth.
+
