Add HPC system design considerations

--- a/3.1-intel-architecture-evolution.md
+++ b/3.1-intel-architecture-evolution.md
@@ -39,3 +39,10 @@ To reduce the congestion, you can increase the number of lanes to the supermarke
 
 The relationship between latency and bantwidth is the **memory hierarchy**. The closer the memory is to the processor, the lower the latency and higher the bandwidth.
 
+## Building a HPC System
+Questions to ask when designing a HPC system:
+1. What software do you want to run? - Workload
+2. What hardware do you need?
+3. What is the power budget?
+4. What is the cooling budget?
+5. What is the space budget?
