docs: Add Intel Architecture & Platform Evolution information

--- a/3.1-intel-architecture-evolution.md
+++ b/3.1-intel-architecture-evolution.md
@@ -46,3 +46,15 @@ Questions to ask when designing a HPC system:
 3. What is the power budget?
 4. What is the cooling budget?
 5. What is the space budget?
+
+## Intel Architecture Platform Evolution - 2 Socket
+![Northbridge and Southbridge](https://upload.wikimedia.org/wikipedia/commons/thumb/b/bd/Motherboard_diagram.svg/600px-Motherboard_diagram.svg.png)
+- **Northbridge**: Connects the CPU to high-speed devices like RAM and GPUs.
+- **Southbridge**: Connects the CPU to slower devices like hard drives and USB ports.
+
+**UMA**: Uniform Memory Access - All processors have the same access time to memory.
+**NUMA**: Non-Uniform Memory Access - Processors have different access times to memory.
+
+**The amount of RAM connected to the CPU increased by 256 times from 2004 to 2023.**
+
+![Intel Tapeout Computing Metrics](https://www.nextplatform.com/wp-content/uploads/2015/11/IntelSCKeynote.png)
