feat: Add information on datacenter cooling techniques

--- a/3.2-green-hyperscale-datacenters.md
+++ b/3.2-green-hyperscale-datacenters.md
@@ -45,3 +45,24 @@ China uses 3 times more electricity than the US - They supply the most products 
     - More power per storage
     - More power per accelerator
     - More power per network bandwidth
+
+### Datacenter Cooling
+[Link to Intel Power Efficiency in Data Centers](https://www.intel.com/content/dam/www/public/us/en/documents/best-practices/intel-it-extremely-energy-efficient-high-density-data-centers-paper.pdf)
+
+- 3 types of cooling:
+    - Free-Air cooling
+    - Liquid cooling
+    - Immersion cooling
+
+#### Free-Air Cooling
+Hot air pushes with such pressure - that bugs can't enter
+![ALTERNATING HOT AND COLD AISLES](3-images/closed-air-segregation.png)
+During cold times, datacenters mix cold air with computer heat
+During moist times, computer heat dries moist air
+![Manage efficient air segregation](3-images/managed-air-segregation.png)
+
+#### Liquid Cooling
+Liquid cooling is 1000x more efficient than air cooling
+
+Datacenters use **Grey Water** for cooling - cleaned by sewage treatment plants -  **50% cheaper than fresh water**
+
