Add information on Shesha Krishnapura's talk at HPC AI Seminar at Stanford

--- a/3.2-green-hyperscale-datacenters.md
+++ b/3.2-green-hyperscale-datacenters.md
@@ -1,7 +1,7 @@
 # Greener Hyperscale Datacenters
 ### Focused Energy Efficiency and Future Cleaner Power
 
-Talk by Shesha Krishnapura, Intel Fellow, Intel Corporation on July 10th 2024 at HPC AI Seminar at Stanford
+Talk by Shesha Krishnapura, Intel Fellow, Intel Corporation on July 10th 2024 at HPC AI Seminar at Stanford (Received a letter by the Whitehouse for his work on energy efficiency)
 
 ## Agenda
 - Electricity Demand Drivers
@@ -57,8 +57,8 @@ China uses 3 times more electricity than the US - They supply the most products 
 #### Free-Air Cooling
 Hot air pushes with such pressure - that bugs can't enter
 ![ALTERNATING HOT AND COLD AISLES](3-images/closed-air-segregation.png)
-During cold times, datacenters mix cold air with computer heat
-During moist times, computer heat dries moist air
+- During cold times, datacenters mix cold air with computer heat
+- During moist times, computer heat dries moist air
 ![Manage efficient air segregation](3-images/managed-air-segregation.png)
 
 #### Liquid Cooling
