Add afterdiscussion notes

--- a/3.2-green-hyperscale-datacenters.md
+++ b/3.2-green-hyperscale-datacenters.md
@@ -77,3 +77,7 @@ Datacenters use **Grey Water** for cooling - cleaned by sewage treatment plants 
 ## Why Hydrogen is the Future Key
 - Hydrogen is the most abundant element in the universe
 - Hydrogen is the most efficient energy carrier
+
+## Afterdiscussion
+"Where do you see yourself at age 60?" - Define your grand vision.
+Intel is the leader and backbone of almost all data centers. 
