feat: Add information on Covid Vaccine size

--- a/3.1-intel-architecture-evolution.md
+++ b/3.1-intel-architecture-evolution.md
@@ -6,6 +6,7 @@ Nobody seems to know the interal architecture of Intel processors better than Sh
 
 ### Foundational Concepts
 - **Silicon Atoms**: Only 0.24 nm large atom. 
+Covid Vaccine is 100 nm in size.
 - **Transistor**: 
 Nanometer sized semiconductor device from silicon used to amplify or switch electronic signals.
 Consist of:
