chore: Update Kitchen analogy

--- a/3.1-intel-architecture-evolution.md
+++ b/3.1-intel-architecture-evolution.md
@@ -25,6 +25,10 @@ Consist of:
 ## Kitchen Analogy to Explain Chip Design
 Imagine a Kitchen that has a fixed size and you want to cook more dishes. You can either increase the number of burners or make the burners more efficient. This is similar to the PPA concept in processors.
 
+The kitchen shouldn't be too big, else you will have to walk too much to get to the fridge. The kitchen shouldn't be too small, else you won't be able to cook many dishes. This is the **area** of the chip.
+
+If the counter is so large that you can't reach objects, the same is true for the chip. 
+
 The burners are the **cores**, the kitchen is the chip, and the dishes are the applications. 
 
 If you increase the number of burners, you need to increase the size of the kitchen. Else you can make the burners more efficient. Increase gas flow - increase **cloock speed**. 
