feat: Add information

--- a/3.1-intel-architecture-evolution.md
+++ b/3.1-intel-architecture-evolution.md
@@ -63,3 +63,16 @@ Questions to ask when designing a HPC system:
 **The amount of RAM connected to the CPU increased by 256 times from 2004 to 2023.**
 
 ![Intel Tapeout Computing Metrics](https://www.nextplatform.com/wp-content/uploads/2015/11/IntelSCKeynote.png)
+
+Tapeout is the final step in the design of a chip before it is sent to the foundry for manufacturing.
+
+## Optical Proximity Correction (OPC) and Fast Fourier Transform (FFT)
+Optical Proximity Correction (OPC) is a technique used in the semiconductor industry to enhance the resolution of photolithography. It is a computational technique used to modify the mask layout to compensate for the diffraction of light as it passes through the mask and onto the wafer. This technique is essential for achieving the desired feature sizes on the wafer and is a critical step in the semiconductor manufacturing process.
+
+FFT is stretching of the mask to compensate for the diffraction of light.
+
+## How to succeed in HPC
+1. Have no fear
+2. Be open mindet
+3. Be curious
+4. Have technical depth and leadership
