feat: Add LLM and Transformer Architecture information

--- a/5.1-fondation-de-lai.md
+++ b/5.1-fondation-de-lai.md
@@ -53,21 +53,29 @@ GPUs are specialised processors - CPUs are the main computation engines.
 
 The frequency on the CPU is higher than the GPU, but the number of cores on the GPU is higher.
 
+## LLM
+A transformer model that was trained on a large amount of data.
+
+## Transformer Architecture
+- **Encoder** - Takes the input and converts it into a hidden representation.
+- **Decoder** - Takes the hidden representation and converts it into the output.
+
 ## Fine Tuning 
-Adapting a pre-trained model to a new task.
-Goal of avoiding training from scratch.
+- Adapting a pre-trained model to a new task.
+- Goal of avoiding training from scratch.
+- Gives more accuracy. 
 
 ## RAG - Retrieval Augmented Generation
+Gives more **context** to the model by providing relevant documents.
 Combines the best of both worlds:
 - **Retrieval** - Search for relevant information
 - **Generation** - Create new information
-
 Retrievs relevant documents, uses the information to generate an answer.
-
 **Advantages**: Less prone to hallucination, grounded in facts.
 **Applications**: Chatbots, Question Answering, content summarisation.
-
 __Key is to have a very good summarisation model.__
+
+## RAFT - Robustness from Adversarial Fine-Tuning
 
 ## LangChain
 A framework for building large language models.
