feat: Update install instructions

--- a/6.1-sentiment-analysis.ipynb
+++ b/6.1-sentiment-analysis.ipynb
@@ -14,14 +14,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "0. Install the requirements and connect to the kernel server\n",
-    "\n",
+    "0. Install the requirements and connect to the remote server\n",
     "For VSCode: \n",
     "- Install the remote-ssh extension\n",
     "- Connect to the remote server\n",
     "\n",
     "Select Kernel:\n",
     "- Open the venv or create a new one\n",
+    "- ```conda install jupyter```\n",
+    "- Launch Jupyter ```jupyter notebook --no-browser --port=8888 --allow-root```\n",
+    "- ```conda install ipykernel```\n",
+    "- ```python -m ipykernel install --user --name=condaenv --display-name \"Python (condaenv)\"```\n",
     "- Run ```pip3 -r requirements.txt```\n",
     "- Make sure to have the remote Kernel selected"
    ]
