hotfix: Remove description

--- a/6.1-sentiment-analysis.ipynb
+++ b/6.1-sentiment-analysis.ipynb
@@ -5,9 +5,7 @@
    "metadata": {},
    "source": [
     "# Sentiment Analysis\n",
-    "Lecture by Dr. Mourad Bouache at Stanford HPC Center on July 29, 2024\n",
-    "\n",
-    "This is a sentiment analysis project using the IMDB dataset. The dataset contains 50,000 reviews, 25,000 for training and 25,000 for testing. The reviews are labeled as positive or negative. The goal is to predict the sentiment of the reviews."
+    "Lecture by Dr. Mourad Bouache at Stanford HPC Center on July 29, 2024"
    ]
   },
   {
