feat: Add explanation of tokenization

--- a/6.1-sentiment-analysis.ipynb
+++ b/6.1-sentiment-analysis.ipynb
@@ -249,7 +249,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Tokenize Dataset"
+    "3. Tokenize Dataset\n",
+    "\n",
+    "A tokenizer breaks the text into words, phrases, symbols, or other meaningful elements. Typically by whitespace, punctuation, or other characters.\n",
+    "\n",
+    "A lexer is a tokenizer that attaches semantic meaning (extra context) to the tokens. E.g. this token is a number, that token is a string literal, this other token is an equality operator"
    ]
   },
   {
